# OpenEnv

./: Dockerfile  README.md  app.py  env.py  inference.py  metadata.json  openenv.yaml  package.json  pyproject.toml  requirements.txt
server/: app.py
src/: App.tsx  index.css
support/: env.py  models.py  tasks.py
